# GenICamImpl

./: CMakeLists.txt  README.md
GenICamLinux64Lib/: CMakeLists.txt
GenICamLinux64Lib/include/CLProtocol/: CLPort.h
GenICamLinux64Lib/include/FirmwareUpdate/: Destructible.h
GenICamLinux64Lib/include/GenApi/: ChunkAdapterGenDC.h  ConcatenatedWrite.h
GenICamLinux64Lib/include/log4cpp/: Log4cppAdapter.hh
GenICamWin64Lib/: CMakeLists.txt
GenICamWin64Lib/include/: _GenICamVersion.h
GenICamWin64Lib/include/Base/: GCLinkage.h
GenICamWin64Lib/include/CLProtocol/: ClSerialTypes.h
GenICamWin64Lib/include/FirmwareUpdate/: FirmwareUpdateDefaultInfoCollector.h
GenICamWin64Lib/include/GenApi/: IPortStacked.h  PortStackedImpl.h
GenICamWin64Lib/include/GenCP/: gencp_defines.h
GenICamWin64Lib/include/Log/: ILogger.h  ILoggerFactory.h
GenICamWin64Lib/include/log4cpp/: CategoryAdapter.hh
GenICamWin64Lib/lib/: CLAllSerial_MD_VC141_v3_2.lib  CLProtocol_MD_VC141_v3_2.lib  FirmwareUpdate_MD_VC141_v3_2.lib  GenCP_MD_VC141_v3_2.lib  clsercom.lib  log4cpp_MD_VC141_v3_2.lib
GevDeviceLib/: CDevice.cpp  CMakeLists.txt  FrameData.cpp  ImageData.cpp  ZipExtract.cpp
GevDeviceLib/UnixSocket/: UnixUdpPort.cpp  UnixUdpPort.cpp.bak
GevDeviceLib/WinSocket/: WinUdpPort.cpp  WinUdpPort.cpp.bak
GevDeviceLib/include/: CDevice.h  FrameData.h  GigEDataTypes.h  ImageData.h  UdpPort.h  ZipExtract.h
Promise/: CMakeLists.txt
Promise/include/: Promise.h
TestApp/: CMakeLists.txt  main.cpp
freeglutWin64/: CMakeLists.txt
zlibWin64/: CMakeLists.txt
zlibWin64/lib/: zlib.lib
